--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 <header class="hero" id="home"><nav class="nav">
 <a href="#about">About</a><a href="#offerings">Offerings</a><a href="#portfolio">Photos</a><a href="#media">Videos</a><a class="btn" href="#book">Book</a>
-</nav><div class="hero-inner"><h1>EMBERBREATH</h1><p class="tagline">Breathwork & Fire Dancing by Emre Gözübüyük</p><a class="btn main-cta" href="#book">Book a Session</a></div></header>
+</nav><div class="hero-inner"><h1>EMBERBREATH</h1><p class="tagline">Breathwork & Flow Art</p><a class="btn main-cta" href="#book">Book a Session</a></div></header>
 <main>
 <section id="about" class="section"><div class="about-media"><img class="about-img" src="assets/gallery/about-portrait.jpg" alt="Emre portrait"></div>
-<div class="container"><h2>About</h2><p>I’m Emre, a breathwork practitioner and fire dancer based in Germany.</p></div></section>
+<div class="container"><h2>About</h2><p>Welcoming you warmly. My name is Emre Gözübüyük and I am a professional breathwork practitioner and flow artist based in Germany. I have done my 2 years of breathwork training with the Alchemy of Breath and have been offering sessions online and in presence over 3 years. Next to my breath career I passionately pursue expressing flow arts through led and fire toys. Between ember and breath lies a deep connection to the dance of life and this is where my inspiration resides for all that I offer.   </p></div></section>
 <section id="offerings" class="section alt"><div class="container"><h2>Offerings</h2>
 <div class="cards"><article class="card"><h3>1:1 Breathwork</h3><p>Tailored session.</p><p class="price">€85/session</p></article>
 <article class="card"><h3>Group Sessions</h3><p>Shared experience.</p><p class="price">from €25/person</p></article>
