--- a/index.html
+++ b/index.html
@@ -17,9 +17,42 @@
 <section id="offerings" class="section alt"><div class="container"><h2>Offerings</h2>
 <div class="cards"><article class="card"><h3>1:1 Breathwork</h3><p>Tailored session.</p><p class="price">€85/session</p></article>
 <article class="card"><h3>Group Sessions</h3><p>Shared experience.</p><p class="price">from €25/person</p></article>
-<article class="card"><h3>Events & Retreats</h3><p>Custom programs & fire performance.</p><p class="price">custom</p></article></div></div></section>
-<section id="portfolio" class="section accent"><div class="container"><h2>Photos</h2><div id="photo-grid" class="portfolio-grid"></div></div></section>
-<section id="media" class="section alt"><div class="container"><h2>Videos</h2><div id="video-grid" class="video-grid"></div></div></section>
+<article class="card">
+  <h3>Events & Retreats</h3>
+  <p>Custom programs & fire performance.</p>
+  <p class="price">custom</p>
+</article>
+</div></div></section>
+
+<!-- ✅ NEW PHOTO SECTION WITH SUBHEADINGS -->
+<section id="portfolio" class="section accent">
+  <div class="container">
+    <h2>Photos</h2>
+
+    <!-- Breath Sessions -->
+    <h3 class="subhead">Breath Sessions</h3>
+    <div id="photo-breath" class="portfolio-grid"></div>
+
+    <!-- Fire Performance -->
+    <h3 class="subhead">Fire Performance</h3>
+    <div id="photo-fire" class="portfolio-grid"></div>
+  </div>
+</section>
+
+<!-- ✅ NEW VIDEO SECTION WITH SUBHEADINGS -->
+<section id="media" class="section alt">
+  <div class="container">
+    <h2>Videos</h2>
+
+    <!-- Breath Sessions -->
+    <h3 class="subhead">Breath Sessions</h3>
+    <div id="video-breath" class="video-grid"></div>
+
+    <!-- Fire Performance -->
+    <h3 class="subhead">Fire Performance</h3>
+    <div id="video-fire" class="video-grid"></div>
+  </div>
+</section>
 <section id="book" class="section"><div class="container narrow"><h2>Book Me</h2>
 <div class="cta-split"><a class="btn wide" href="https://calendly.com/emberbreath" target="_blank" rel="noopener">Book via Calendly</a>
 <a class="btn outline wide" href="mailto:emre.gozubuyuk222@gmail.com">Email Me</a></div>
