--- a/index.html
+++ b/index.html
@@ -24,20 +24,44 @@
 </article>
 </div></div></section>
 
-<!-- ✅ NEW PHOTO SECTION WITH SUBHEADINGS -->
+<!-- ✅ PHOTO SECTION WITH SUBHEADINGS -->
 <section id="portfolio" class="section accent">
   <div class="container">
     <h2>Photos</h2>
 
-    <!-- Breath Sessions -->
+    <!-- 🔹 Breath Sessions -->
     <h3 class="subhead">Breath Sessions</h3>
-    <div id="photo-breath" class="portfolio-grid"></div>
+    <div id="photo-breath" class="portfolio-grid">
+      <figure>
+        <img src="assets/gallery/breath-festival.jpg" alt="Breath festival outdoor session" loading="lazy">
+      </figure>
+      <figure>
+        <img src="assets/gallery/breath-wild.jpg" alt="Breathwork in nature" loading="lazy">
+      </figure>
+      <figure>
+        <img src="assets/gallery/breath-festival2.jpg" alt="Festival breath circle" loading="lazy">
+      </figure>
+      <figure>
+        <img src="assets/gallery/breath-room.jpg" alt="Indoor breath practice setup" loading="lazy">
+      </figure>
+    </div>
 
-    <!-- Fire Performance -->
+    <!-- 🔹 Fire Performance -->
     <h3 class="subhead">Fire Performance</h3>
-    <div id="photo-fire" class="portfolio-grid"></div>
+    <div id="photo-fire" class="portfolio-grid">
+      <figure>
+        <img src="assets/gallery/fire-dance.jpg" alt="Fire dance in nature" loading="lazy">
+      </figure>
+      <figure>
+        <img src="assets/gallery/fire-1.jpg" alt="Fire spinning performance 1" loading="lazy">
+      </figure>
+      <figure>
+        <img src="assets/gallery/fire-2.jpg" alt="Fire spinning performance 2" loading="lazy">
+      </figure>
+    </div>
   </div>
 </section>
+
 
 <!-- ✅ NEW VIDEO SECTION WITH SUBHEADINGS -->
 <section id="media" class="section alt">
