--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-<header class="hero" id="home"><nav class="nav">
+<section id="hero" class="hero" style="background-image: url('assets/gallery/entry-photo.jpg');">
+  <div class="hero-content">
+    <h1>Ember Breath</h1>
+    <p>Breathwork • Fire Performance • Connection</p>
+    <a href="#portfolio" class="btn">Explore</a>
+  </div>
+</section>
+
 <a href="#about">About</a><a href="#offerings">Offerings</a><a href="#portfolio">Photos</a><a href="#media">Videos</a><a class="btn" href="#book">Book</a>
 </nav><div class="hero-inner"><h1>EMBERBREATH</h1><p class="tagline">Breathwork & Flow Art</p><a class="btn main-cta" href="#book">Book a Session</a></div></header>
 <main>
