--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>EmberBreath — Emre Gözübüyük</title>
 
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,7 +32,7 @@
     <div class="hero-overlay">
       <div class="hero-content">
         <h1>Ember Breath</h1>
-        <p class="tagline">Breathwork • Fire Performance • Connection</p>
+        <p class="tagline">Breathwork Practitioner & Flow Artist</p>
         <a href="#portfolio" class="btn main-cta">Explore the Journey</a>
       </div>
     </div>
