--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+  <title>EmberBreath — Emre Gözübüyük</title>
+  
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +16,7 @@
   <header class="site-header">
     <div class="container">
       <div class="header-inner">
-        <div class="logo-text">EmberBreath</div>
+        <div class="logo-text"></div>
         <nav class="nav">
           <a href="#about">About</a>
           <a href="#offerings">Offerings</a>
