--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@
     <div class="portfolio-grid">
       <figure>
         <a href="assets/gallery/fire-2.jpg" class="glightbox" data-gallery="fire">
-          <img src="assets/gallery/fire-dance.jpg" alt="Fire dance in nature" loading="lazy" />
-        </a>
-      </figure>
-      <figure>
-        <a href="assets/gallery/fire-1.jpg" class="glightbox" data-gallery="fire">
-          <img src="assets/gallery/fire-1.jpg" alt="Fire spinning performance 1" loading="lazy" />
+          <img src="assets/gallery/fire-2.jpg" alt="Fire dance in nature" loading="lazy" />
         </a>
       </figure>
       <figure>
         <a href="assets/gallery/fire-dance.jpg" class="glightbox" data-gallery="fire">
-          <img src="assets/gallery/fire-2.jpg" alt="Fire spinning performance 2" loading="lazy" />
+          <img src="assets/gallery/fire-dance.jpg" alt="Fire spinning performance 1" loading="lazy" />
+        </a>
+      </figure>
+      <figure>
+        <a href="assets/gallery/fire-1.jpg" class="glightbox" data-gallery="fire">
+          <img src="assets/gallery/fire-1.jpg" alt="Fire spinning performance 2" loading="lazy" />
         </a>
       </figure>
     </div>
