--- a/index.html
+++ b/index.html
@@ -154,27 +154,34 @@
           </p>
         </div>
 
-        <!-- Fire Performance -->
-        <h3 class="subhead">Fire Performance</h3>
-        <div class="video-grid">
-          <video controls playsinline preload="metadata" poster="assets/gallery/fire-dance.jpg">
-            <source src="assets/gallery/fire-1.mp4" type="video/mp4" />
-            Sorry, your browser can’t play this video.
-          </video>
+       <!-- Fire Performance -->
+<h3 class="subhead">Fire Performance</h3>
+<div class="video-grid">
+  <figure>
+    <a href="assets/gallery/fire-1.mp4" class="glightbox" data-gallery="firevideos" data-type="video" data-poster="assets/gallery/fire-dance.jpg">
+      <img src="assets/gallery/fire-dance.jpg" alt="Fire performance 1" loading="lazy" />
+    </a>
+  </figure>
 
-          <video controls playsinline preload="metadata" poster="assets/gallery/fire-1.jpg">
-            <source src="assets/gallery/fire-2.mp4" type="video/mp4" />
-          </video>
+  <figure>
+    <a href="assets/gallery/fire-2.mp4" class="glightbox" data-gallery="firevideos" data-type="video" data-poster="assets/gallery/fire-1.jpg">
+      <img src="assets/gallery/fire-1.jpg" alt="Fire performance 2" loading="lazy" />
+    </a>
+  </figure>
 
-          <video controls playsinline preload="metadata" poster="assets/gallery/fire-2.jpg">
-            <source src="assets/gallery/fire-3.mp4" type="video/mp4" />
-          </video>
+  <figure>
+    <a href="assets/gallery/fire-3.mp4" class="glightbox" data-gallery="firevideos" data-type="video" data-poster="assets/gallery/fire-2.jpg">
+      <img src="assets/gallery/fire-2.jpg" alt="Fire performance 3" loading="lazy" />
+    </a>
+  </figure>
 
-          <video controls playsinline preload="metadata" poster="assets/gallery/fire-2.jpg">
-            <source src="assets/gallery/fire-4.mp4" type="video/mp4" />
-          </video>
-        </div>
-      </div>
+  <figure>
+    <a href="assets/gallery/fire-4.mp4" class="glightbox" data-gallery="firevideos" data-type="video" data-poster="assets/gallery/fire-2.jpg">
+      <img src="assets/gallery/fire-2.jpg" alt="Fire performance 4" loading="lazy" />
+    </a>
+  </figure>
+</div>
+
     </section>
 
     <!-- BOOKING -->
