--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 <h3 class="subhead">Fire Performance</h3>
 <div class="video-grid">
   <figure>
-    <a href="assets/gallery/fire-1.mp4" class="glightbox" data-gallery="firevideos" data-type="video" data-poster="assets/gallery/fire-dance.jpg">
-      <img src="assets/gallery/fire-dance.jpg" alt="Fire performance 1" loading="lazy" />
+    <a href="assets/gallery/Fire-1Real.mp4" class="glightbox" data-gallery="firevideos" data-type="video" data-poster="assets/gallery/fire-dance.jpg">
+      <img src="assets/gallery/Fire-1Real.jpg" alt="Fire performance 1" loading="lazy" />
     </a>
   </figure>
 
@@ -262,7 +262,7 @@
     selector: '.glightbox',
     touchNavigation: true,
     loop: true,
-    closeButton: true
+    autoplayVideos: true
   });
 </script>
 
